--- a/index.template.html
+++ b/index.template.html
@@ -25,9 +25,8 @@
 
         
         <video id="MY_VIDEO_1" class="video-js vjs-default-skin" controls
-         preload="auto" width="640" height="264" poster="MY_VIDEO_POSTER.jpg"
          data-setup="{}">
-         <source src="test.mp4" type='video/mp4'>
+         <source src="test/1/drop.avi.mp4" type='video/mp4'>
          <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
         </video>
 
